FinalPython/PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'('", "'['", 
                     "'{'", "')'", "']'", "'}'", "':'", "','", "';'", "'+'", 
                     "'-'", "'*'", "'/'", "'|'", "'&'", "'<'", "'>'", "'='", 
                     "'.'", "'%'", "'`'", "'=='", "'<>'", "'!='", "'<='", 
                     "'>='", "'~'", "'^'", "'<<'", "'>>'", "'**'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", 
                     "'<<='", "'>>='", "'**='", "'//'", "'//='", "'@'", 
                     "'and'", "'as'", "'assert'", "'break'", "'class'", 
                     "'continue'", "'def'", "'del'", "'elif'", "'else'", 
                     "'except'", "'exec'", "'finally'", "'for'", "'from'", 
                     "'global'", "'if'", "'import'", "'in'", "'is'", "'lambda'", 
                     "'not'", "'or'", "'pass'", "'print'", "'raise'", "'return'", 
                     "'try'", "'while'", "'with'", "'yield'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "LPAR", "LSQB", "LBRACE", 
                      "RPAR", "RSQB", "RBRACE", "COLON", "COMMA", "SEMI", 
                      "PLUS", "MINUS", "STAR", "SLASH", "VBAR", "AMPER", 
                      "LESS", "GREATER", "EQUAL", "DOT", "PERCENT", "BACKQUOTE", 
                      "EQEQUAL", "INEQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", 
                      "TILDE", "CIRCUMFLEX", "LEFTSHIFT", "RIGHTSHIFT", 
                      "DOUBLESTAR", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", 
                      "SLASHEQUAL", "PERCENTEQUAL", "AMPEREQUAL", "VBAREQUAL", 
                      "CIRCUMFLEXEQUAL", "LEFTSHIFTEQUAL", "RIGHTSHIFTEQUAL", 
                      "DOUBLESTAREQUAL", "DOUBLESLASH", "DOUBLESLASHEQUAL", 
                      "AT", "AND", "AS", "ASSERT", "BREAK", "CLASS", "CONTINUE", 
                      "DEF", "DEL", "ELIF", "ELSE", "EXCEPT", "EXEC", "FINALLY", 
                      "FOR", "FROM", "GLOBAL", "IF", "IMPORT", "IN", "IS", 
                      "LAMBDA", "NOT", "OR", "PASS", "PRINT", "RAISE", "RETURN", 
                      "TRY", "WHILE", "WITH", "YIELD", "NAME", "NUMBER", 
                      "STRING", "NEWLINE", "COMMENT", "WS", "EXPLICIT_LINE_JOINING", 
                      "ERRORTOKEN" ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_eval_input = 2
    RULE_decorator = 3
    RULE_decorators = 4
    RULE_decorated = 5
    RULE_funcdef = 6
    RULE_parameters = 7
    RULE_varargslist = 8
    RULE_fpdef = 9
    RULE_fplist = 10
    RULE_stmt = 11
    RULE_simple_stmt = 12
    RULE_small_stmt = 13
    RULE_expr_stmt = 14
    RULE_augassign = 15
    RULE_print_stmt = 16
    RULE_del_stmt = 17
    RULE_pass_stmt = 18
    RULE_flow_stmt = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_return_stmt = 22
    RULE_yield_stmt = 23
    RULE_raise_stmt = 24
    RULE_import_stmt = 25
    RULE_import_name = 26
    RULE_import_from = 27
    RULE_import_as_name = 28
    RULE_dotted_as_name = 29
    RULE_import_as_names = 30
    RULE_dotted_as_names = 31
    RULE_dotted_name = 32
    RULE_global_stmt = 33
    RULE_exec_stmt = 34
    RULE_assert_stmt = 35
    RULE_compound_stmt = 36
    RULE_if_stmt = 37
    RULE_while_stmt = 38
    RULE_for_stmt = 39
    RULE_try_stmt = 40
    RULE_with_stmt = 41
    RULE_with_item = 42
    RULE_except_clause = 43
    RULE_suite = 44
    RULE_testlist_safe = 45
    RULE_old_test = 46
    RULE_old_lambdef = 47
    RULE_test = 48
    RULE_or_test = 49
    RULE_and_test = 50
    RULE_not_test = 51
    RULE_comparison = 52
    RULE_comp_op = 53
    RULE_expr = 54
    RULE_xor_expr = 55
    RULE_and_expr = 56
    RULE_shift_expr = 57
    RULE_arith_expr = 58
    RULE_term = 59
    RULE_factor = 60
    RULE_power = 61
    RULE_atom = 62
    RULE_listmaker = 63
    RULE_testlist_comp = 64
    RULE_lambdef = 65
    RULE_trailer = 66
    RULE_subscriptlist = 67
    RULE_subscript = 68
    RULE_sliceop = 69
    RULE_exprlist = 70
    RULE_testlist = 71
    RULE_dictorsetmaker = 72
    RULE_classdef = 73
    RULE_arglist = 74
    RULE_argument = 75
    RULE_list_iter = 76
    RULE_list_for = 77
    RULE_list_if = 78
    RULE_comp_iter = 79
    RULE_comp_for = 80
    RULE_comp_if = 81
    RULE_testlist1 = 82
    RULE_encoding_decl = 83
    RULE_yield_expr = 84

    ruleNames =  [ "single_input", "file_input", "eval_input", "decorator", 
                   "decorators", "decorated", "funcdef", "parameters", "varargslist", 
                   "fpdef", "fplist", "stmt", "simple_stmt", "small_stmt", 
                   "expr_stmt", "augassign", "print_stmt", "del_stmt", "pass_stmt", 
                   "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "yield_stmt", "raise_stmt", "import_stmt", "import_name", 
                   "import_from", "import_as_name", "dotted_as_name", "import_as_names", 
                   "dotted_as_names", "dotted_name", "global_stmt", "exec_stmt", 
                   "assert_stmt", "compound_stmt", "if_stmt", "while_stmt", 
                   "for_stmt", "try_stmt", "with_stmt", "with_item", "except_clause", 
                   "suite", "testlist_safe", "old_test", "old_lambdef", 
                   "test", "or_test", "and_test", "not_test", "comparison", 
                   "comp_op", "expr", "xor_expr", "and_expr", "shift_expr", 
                   "arith_expr", "term", "factor", "power", "atom", "listmaker", 
                   "testlist_comp", "lambdef", "trailer", "subscriptlist", 
                   "subscript", "sliceop", "exprlist", "testlist", "dictorsetmaker", 
                   "classdef", "arglist", "argument", "list_iter", "list_for", 
                   "list_if", "comp_iter", "comp_for", "comp_if", "testlist1", 
                   "encoding_decl", "yield_expr" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    LPAR=3
    LSQB=4
    LBRACE=5
    RPAR=6
    RSQB=7
    RBRACE=8
    COLON=9
    COMMA=10
    SEMI=11
    PLUS=12
    MINUS=13
    STAR=14
    SLASH=15
    VBAR=16
    AMPER=17
    LESS=18
    GREATER=19
    EQUAL=20
    DOT=21
    PERCENT=22
    BACKQUOTE=23
    EQEQUAL=24
    INEQUAL=25
    NOTEQUAL=26
    LESSEQUAL=27
    GREATEREQUAL=28
    TILDE=29
    CIRCUMFLEX=30
    LEFTSHIFT=31
    RIGHTSHIFT=32
    DOUBLESTAR=33
    PLUSEQUAL=34
    MINEQUAL=35
    STAREQUAL=36
    SLASHEQUAL=37
    PERCENTEQUAL=38
    AMPEREQUAL=39
    VBAREQUAL=40
    CIRCUMFLEXEQUAL=41
    LEFTSHIFTEQUAL=42
    RIGHTSHIFTEQUAL=43
    DOUBLESTAREQUAL=44
    DOUBLESLASH=45
    DOUBLESLASHEQUAL=46
    AT=47
    AND=48
    AS=49
    ASSERT=50
    BREAK=51
    CLASS=52
    CONTINUE=53
    DEF=54
    DEL=55
    ELIF=56
    ELSE=57
    EXCEPT=58
    EXEC=59
    FINALLY=60
    FOR=61
    FROM=62
    GLOBAL=63
    IF=64
    IMPORT=65
    IN=66
    IS=67
    LAMBDA=68
    NOT=69
    OR=70
    PASS=71
    PRINT=72
    RAISE=73
    RETURN=74
    TRY=75
    WHILE=76
    WITH=77
    YIELD=78
    NAME=79
    NUMBER=80
    STRING=81
    NEWLINE=82
    COMMENT=83
    WS=84
    EXPLICIT_LINE_JOINING=85
    ERRORTOKEN=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Single_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_input" ):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = PythonParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [82]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(PythonParser.NEWLINE)
                pass
            elif token in [3, 4, 5, 12, 13, 23, 29, 50, 51, 53, 55, 59, 62, 63, 65, 68, 69, 71, 72, 73, 74, 78, 79, 80, 81]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.simple_stmt()
                pass
            elif token in [47, 52, 54, 61, 64, 75, 76, 77]:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.compound_stmt()
                self.state = 173
                self.match(PythonParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = PythonParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -1658309824745557960) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 524211) != 0):
                self.state = 179
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [82]:
                    self.state = 177
                    self.match(PythonParser.NEWLINE)
                    pass
                elif token in [3, 4, 5, 12, 13, 23, 29, 47, 50, 51, 52, 53, 54, 55, 59, 61, 62, 63, 64, 65, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81]:
                    self.state = 178
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eval_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(PythonParser.TestlistContext,0)


        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_eval_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval_input" ):
                listener.enterEval_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval_input" ):
                listener.exitEval_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEval_input" ):
                return visitor.visitEval_input(self)
            else:
                return visitor.visitChildren(self)




    def eval_input(self):

        localctx = PythonParser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.testlist()
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==82:
                self.state = 187
                self.match(PythonParser.NEWLINE)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 193
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecoratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(PythonParser.AT, 0)

        def dotted_name(self):
            return self.getTypedRuleContext(PythonParser.Dotted_nameContext,0)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def LPAR(self):
            return self.getToken(PythonParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(PythonParser.RPAR, 0)

        def arglist(self):
            return self.getTypedRuleContext(PythonParser.ArglistContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_decorator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorator" ):
                listener.enterDecorator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorator" ):
                listener.exitDecorator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecorator" ):
                return visitor.visitDecorator(self)
            else:
                return visitor.visitChildren(self)




    def decorator(self):

        localctx = PythonParser.DecoratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decorator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(PythonParser.AT)
            self.state = 196
            self.dotted_name()
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 197
                self.match(PythonParser.LPAR)
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 9135222840) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 14339) != 0):
                    self.state = 198
                    self.arglist()


                self.state = 201
                self.match(PythonParser.RPAR)


            self.state = 204
            self.match(PythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecoratorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decorator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.DecoratorContext)
            else:
                return self.getTypedRuleContext(PythonParser.DecoratorContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_decorators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorators" ):
                listener.enterDecorators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorators" ):
                listener.exitDecorators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecorators" ):
                return visitor.visitDecorators(self)
            else:
                return visitor.visitChildren(self)




    def decorators(self):

        localctx = PythonParser.DecoratorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decorators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 206
                self.decorator()
                self.state = 209 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==47):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecoratedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decorators(self):
            return self.getTypedRuleContext(PythonParser.DecoratorsContext,0)


        def classdef(self):
            return self.getTypedRuleContext(PythonParser.ClassdefContext,0)


        def funcdef(self):
            return self.getTypedRuleContext(PythonParser.FuncdefContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_decorated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorated" ):
                listener.enterDecorated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorated" ):
                listener.exitDecorated(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecorated" ):
                return visitor.visitDecorated(self)
            else:
                return visitor.visitChildren(self)




    def decorated(self):

        localctx = PythonParser.DecoratedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decorated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.decorators()
            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.state = 212
                self.classdef()
                pass
            elif token in [54]:
                self.state = 213
                self.funcdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(PythonParser.ParametersContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = PythonParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.match(PythonParser.DEF)
            self.state = 217
            self.match(PythonParser.NAME)
            self.state = 218
            self.parameters()
            self.state = 219
            self.match(PythonParser.COLON)
            self.state = 220
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(PythonParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(PythonParser.RPAR, 0)

        def varargslist(self):
            return self.getTypedRuleContext(PythonParser.VarargslistContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = PythonParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.match(PythonParser.LPAR)
            self.state = 224
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589950984) != 0) or _la==79:
                self.state = 223
                self.varargslist()


            self.state = 226
            self.match(PythonParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarargslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fpdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FpdefContext)
            else:
                return self.getTypedRuleContext(PythonParser.FpdefContext,i)


        def STAR(self):
            return self.getToken(PythonParser.STAR, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NAME)
            else:
                return self.getToken(PythonParser.NAME, i)

        def DOUBLESTAR(self):
            return self.getToken(PythonParser.DOUBLESTAR, 0)
